--- a/research.html
+++ b/research.html
@@ -218,7 +218,7 @@
                 <paper_title>Interaction With Virtual Objects using Human Pose and Shape Estimation</paper_title><br>
                 <paper_authors>Nguyen, Hong Son and Cheong, DaEun and <b>Chalmers, Andrew</b> and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun</paper_authors><br>
                 <paper_publisher>38th International Computer Animation Social Agents, 2025</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/nguyen2025interaction.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025interaction-compressed.pdf', '_blank')">PDF 4MB</button>
+                <button class="button-main" onclick="window.open('./papers/nguyen2025interaction.pdf', '_blank')">PDF 13MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025interaction-compressed.pdf', '_blank')">PDF 4MB</button>
             </div>
           </li>
         </ul>
@@ -469,7 +469,7 @@
             <div class="item-text">
                 <paper_title>Real-Time Underwater Caustics for Mixed Reality 360° Videos</paper_title><br>
                 <paper_authors>Thompson, Stephen and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces (Poster), 2019</paper_publisher><br>
+                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2019</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/thompson2019real-caustics.pdf', '_blank')">PDF 2MB</button>                <button class="button-other" onclick="window.open('./papers/thompson2019real-caustics-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
