added ieee vr 2020 poster

--- a/research.html
+++ b/research.html
@@ -207,7 +207,7 @@
             <div class="item-text">
                 <paper_title>Full-Body Interaction in Mixed Reality using 3D Pose and Shape Estimation</paper_title><br>
                 <paper_authors>Nguyen, Hong Son and <b>Chalmers, Andrew</b> and Cheong, DaEun and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun</paper_authors><br>
-                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2025</paper_publisher><br>
+                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces (poster), 2025</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/nguyen2025full.pdf', '_blank')">PDF 2MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025full-compressed.pdf', '_blank')">PDF 2MB</button>
                 <button class="button-other" onclick="window.open('./papers/nguyen2025full-poster.pdf', '_blank')">Poster</button>
             </div>
@@ -421,8 +421,9 @@
             <div class="item-text">
                 <paper_title>Asymmetric Interaction Between HMD Wearers and Spectators With a Large Display</paper_title><br>
                 <paper_authors>Welsford-Ackroyd, Finn and <b>Chalmers, Andrew</b> and dos Anjos, Rafael K and Medeiros, Daniel and Kim, Hyejin and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops, 2020</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/welsford2020asymmetric.pdf', '_blank')">PDF 1MB</button>            </div>
+                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (poster), 2020</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/welsford2020asymmetric.pdf', '_blank')">PDF 1MB</button>                <button class="button-other" onclick="window.open('./papers/welsford2020asymmetric-poster.pdf', '_blank')">Poster</button>
+            </div>
           </li>
           <li>
             <img src="./thumbnails/rhee2020augmented-thumbnail.jpg" alt="Thumbnail">
@@ -469,7 +470,7 @@
             <div class="item-text">
                 <paper_title>Real-Time Underwater Caustics for Mixed Reality 360° Videos</paper_title><br>
                 <paper_authors>Thompson, Stephen and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2019</paper_publisher><br>
+                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces (poster), 2019</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/thompson2019real-caustics.pdf', '_blank')">PDF 2MB</button>                <button class="button-other" onclick="window.open('./papers/thompson2019real-caustics-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
