--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                     <p>My research areas are related to computer graphics, computer vision, machine learning, extended reality (AR/MR/VR), and telepresence/telecollaboration. I was previously a researcher at The University of Melbourne in the <a href="https://cis.unimelb.edu.au/" target="_blank">School of Computing and Information Systems</a>, and a researcher at Victoria University of Wellington in the <a href="https://www.wgtn.ac.nz/cmic" target="_blank">Computational Media Innovation Centre (CMIC)</a>.</p>
 
-                    <p>My PhD is in Computer Graphics, and my undergraduate double degree is majoring in Computer Science and Philosophy.</p>
+                    <p>My PhD is in Computer Graphics, and I have a double degree (BSc/BA) majoring in Computer Science and Philosophy.</p>
 
                     <p>Skills include: Python, C/C++, Java, C#, Javascript, Android development, OpenGL API, Unity3D & Unreal Engine, Maya (API & interface), and lecturing/tutoring.</p>
 
