--- a/research.html
+++ b/research.html
@@ -185,7 +185,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="research.html"><b>Research</b></a></li>
+					<li class="active"><a href="research.html"><b>Publications</b></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -193,12 +193,10 @@
 		<hr style="border: none; border-top: 1px solid #333; margin: 0;">
 
 		<main>
-			<h2>Research</h2> <!-- Centered "Research" text with Roboto font -->
+			<h2>Publications</h2> 
 			<div class="content">
-				<!-- Add your research content here -->
-				<!-- Add any research-related images here -->
 				<img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
-				<h2>Publications</h2>
+				<!--  <h2>Publications</h2> -->
 
 <h3 style="text-align: left;">2025</h3>
         <ul>
@@ -584,7 +582,7 @@
             <div class="item-text">
                 <paper_title>Perceptually Optimised Illumination for Seamless Composites</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b> and Choi, Jong Jin and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>Pacific Graphics, 2014</paper_publisher><br>
+                <paper_publisher>Pacific Graphics (short paper), 2014</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2014perceptually.pdf', '_blank')">PDF 3MB</button>            </div>
           </li>
           <li>
@@ -592,7 +590,7 @@
             <div class="item-text">
                 <paper_title>Sky Browser: Search for HDR Sky Maps</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b> and Lewis, John and Hillman, Peter and Tait, Charlie and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>Pacific Graphics, 2014</paper_publisher><br>
+                <paper_publisher>Pacific Graphics (short paper), 2014</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2014sky.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2014sky-compressed.pdf', '_blank')">PDF 2MB</button>
             </div>
           </li>
