changed tab name from research to publications

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <nav>
                 <ul>
                     <li class="active"><a href="index.html"><b>Home</b></a></li>
-                    <li><a href="research.html">Research</a></li>
+                    <li><a href="research.html">Publications</a></li>
                 </ul>
             </nav>
         </header>
