added ismar 2025 poster

--- a/research.html
+++ b/research.html
@@ -219,6 +219,14 @@
                 <button class="button-main" onclick="window.open('./papers/nguyen2025interaction.pdf', '_blank')">PDF 13MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025interaction-compressed.pdf', '_blank')">PDF 4MB</button>
             </div>
           </li>
+          <li>
+            <img src="./thumbnails/chalmers2025the-thumbnail.jpg" alt="Thumbnail">
+            <div class="item-text">
+                <paper_title>The Impact of Occlusion and Collision on Real–virtual Interaction in Mixed Reality 360° Images</paper_title><br>
+                <paper_authors><b>Chalmers, Andrew</b> and Jeong, SeungWon and Yuan, Xuteng and Zhang, Fang-Lue and Rhee, Taehyun</paper_authors><br>
+                <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality (poster), 2025</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/chalmers2025the.pdf', '_blank')">PDF 8MB</button>            </div>
+          </li>
         </ul>
 
 <h3 style="text-align: left;">2024</h3>
