--- a/research.html
+++ b/research.html
@@ -198,6 +198,18 @@
 				<img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
 				<!--  <h2>Publications</h2> -->
 
+<h3 style="text-align: left;">2026</h3>
+        <ul>
+          <li>
+            <img src="./thumbnails/Zhong2026SE360-thumbnail.jpg" alt="Thumbnail">
+            <div class="item-text">
+                <paper_title>SE360: Semantic Edit in 360° Panoramas Via Hierarchical Data Construction</paper_title><br>
+                <paper_authors>Zhong, Haoyi and Zhang, Fang-Lue and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
+                <paper_publisher>Association for the Advancement of Artificial Intelligence, 2026</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/Zhong2026SE360.pdf', '_blank')">PDF 1MB</button>            </div>
+          </li>
+        </ul>
+
 <h3 style="text-align: left;">2025</h3>
         <ul>
           <li>
