--- a/research.html
+++ b/research.html
@@ -206,7 +206,8 @@
                 <paper_title>SE360: Semantic Edit in 360° Panoramas Via Hierarchical Data Construction</paper_title><br>
                 <paper_authors>Zhong, Haoyi and Zhang, Fang-Lue and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Association for the Advancement of Artificial Intelligence, 2026</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/Zhong2026SE360.pdf', '_blank')">PDF 1MB</button>            </div>
+                <button class="button-main" onclick="window.open('./papers/Zhong2026SE360.pdf', '_blank')">PDF 8MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/Zhong2026SE360-compressed.pdf', '_blank')">PDF 2MB</button>
+            </div>
           </li>
         </ul>
 
